2009-07-14  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/edebug.el (edebug-setup-hook, edebug-all-forms)
	(edebug-eval-macro-args, edebug-save-displayed-buffer-points)
	(edebug-print-length, edebug-print-level, edebug-print-circle)
	(edebug-sit-for-seconds, edebug-view-outside)
	(edebug-bounce-point, edebug-set-global-break-condition)
	(edebug-Go-nonstop-mode, edebug-trace-mode)
	(edebug-Trace-fast-mode, edebug-continue-mode)
	(edebug-Continue-fast-mode, edebug-forward-sexp, edebug-help)
	(edebug-visit-eval-list): Doc fixes.

	* subr.el (def-edebug-spec): Doc fix.

2009-07-14  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Fix setting of category ?C.

2009-07-12  Guanpeng Xu  <herberteuler@hotmail.com>

	* pcomplete.el (pcomplete-comint-setup): Check for
	shell-dynamic-complete-filename too.

2009-07-11  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-character-set): Don't show
	width.

2009-07-10  Eli Zaretskii  <eliz@gnu.org>

	* cus-edit.el (customize-changed-options-previous-release): Bump
	value to 22.1.  (Bug#3804)

2009-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-set-file-uid-gid): Handle the case the
	remote user is root, on the local host.
	(tramp-local-host-p): Either the local user or the remote user
	must be root.  (Bug#3771)

2009-07-08  E. Jay Berkenbilt  <ejb@ql.org>  (tiny change)

	* mail/unrmail.el (unrmail): Make sure the message ends with two
	newlines (Bug#3769).

2009-07-08  Kenichi Handa  <handa@m17n.org>

	* international/fontset.el (setup-default-fontset): For each
	script, append (not set) font-specs.

	* language/japanese.el (japanese-shift-jis-2004): Fix typo in the
	docstring.

2009-07-07  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (reset-language-environment): Put
	the highset priority to the charset iso-8859-1.

2009-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-write-region): Flush file properties