@@ -1,3 +1,7 @@
+2009-07-14  Chong Yidong  <cyd@stupidchicken.com>
+
+	* simple.el (line-move): Call line-move-1 if lines are truncated.
+
 2009-07-14  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/edebug.el (edebug-setup-hook, edebug-all-forms)
